blackpink with pic

--- a/src/blackpink.css
+++ b/src/blackpink.css
@@ -13,7 +13,7 @@
   --channels-default: #81a1c1 !important;
   --focus-primary: #00b0f4 !important;
   --primary-dark-630: var(--background-secondary-alt) !important;
-  --background-image: url(https://6.viki.io/image/03f3606ef6884db9b1aab1060924873e.jpeg);
+  --background-image: url(https://i.postimg.cc/ZnxhxGLg/286c3c59c3c14f9037f0b4ce0fef9bf53.png);
 
   --background-modifier-selected: #2b3d58 !important;
   --background-modifier-hover: #6c0058 !important;
