--- a/src/blackpink.css
+++ b/src/blackpink.css
@@ -94,6 +94,10 @@
 
 .container-2o3qEW {
   background: var(--background-image) center/cover no-repeat fixed !important; 
+}
+
+.form-3gdLxP {
+  background: var(--background-image) center/cover no-repeat fixed !important; 
 } */
 
 /* Channels */
